nova ediçao de imagens

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <section id="hero">
-        <img class="foto-perfil" src="/imagens/perfil portifolio.jpg" alt="Minha Foto">
+        <img class="foto-perfil" src="./img/perfi porti edit.jpg.jpg" alt="Minha Foto">
         <h1>Olá, eu sou [José Filho]</h1>
         <p>Desenvolvedor Full Stack</p>
         <p class="descricao">Tenho 31 anos, e estou Atualmenete estudando HTML, CSS e JavaScript,com propósito de me
@@ -36,23 +36,23 @@
             <h3>Projeto 1</h3>
             <p>Landing Page oficina,com peças de demostração e com atendimento direcionado ao cliente por wathsapp.
                 Desenvolvido com <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css"></i> .</p>
-            <img src="./imagens/IMAGEM 1 PORTIFOLIO.JPG" alt="Projeto Site Oficina" width="650" height="350"></img>
-            <img src="./imagens/imagem 2 portifolio 1.JPG" alt="imagem 2" width="650" height="350"></img>
+            <img src="./img/oficina imagem 1.jpg" alt="Projeto Site Oficina" width="650" height="350"></img>
+            <img src="./img/oficina imagem 2.jpg" alt="imagem 2" width="650" height="350"></img>
             <a href="https://josefilhoest.github.io/ciclo-pecas-o-coquinho/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
             <h3>Projeto 2</h3>
             <p>Projeto tradutor online funcional,Desenvolvido com <i class="fa-brands fa-html5"></i> <i
                     class="fa-brands fa-css"></i> <i class="fa-brands fa-js"></i></p>
-            <img src="/imagens/projeto tardutor.JPG" alt="Projeto Tradutor Online" width="650" height="350"></img>
-            <img src="/imagens/tradutor traduzindo.JPG" alt="imagem tradutor traduzindo" width="650" height="350"></img>
+            <img src="./img/imagem tradutor.jpg" alt="Projeto Tradutor Online" width="650" height="350"></img>
+            <img src="./img/tradutor traduzindo.jpg" alt="imagem tradutor traduzindo" width="650" height="350"></img>
             <a href="https://josefilhoest.github.io/tradutor-devclub/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
                 <h3>Projeto 3</h3>
                 <p>Projeto Landing Page para salão de beleza Desenvolvido com <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css"></i></p>
-                <img src="/imagens/imagem jf beleza 1.JPG" alt="Projeto salão de beleza" width="650" height="350"></img>
-                <img src="/imagens/imagem jf beleza 2.JPG" alt="imagem com imagens de serviços de salão" width="650" height="350"></img>
+                <img src="./img/imagem land salao.jpg" alt="Projeto salão de beleza" width="650" height="350"></img>
+                <img src="./img/pagina 2 jf beleza.jpg" alt="imagem com imagens de serviços de salão" width="650" height="350"></img>
                 <a href="https://josefilhoest.github.io/JF-BELEZA/">
                     <button class="ver-projeto">Ver Projeto</button></a>
         </div>
