--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h1>Olá, eu sou [José Filho]</h1>
         <p>Desenvolvedor Full Stack</p>
         <p class="descricao">Tenho 31 anos, e estou Atualmenete estudando HTML, CSS e JavaScript,com propósito de me
-            tornar um Desenvolvedor Full Stack.Em transição de carreira de auxiliar de mecânico para Desenvolvedor.Gosto
-            de aprender novas tecnologias e com elas criar projetos inovadores.</p>
-        <button>Ver Meus Projetos</button>
+            tornar um Desenvolvedor Full Stack.Gosto de aprender novas tecnologias e com elas criar projetos inovadores
+            e interessantes .</p>
+        <button onclick="location.href='#projetos'">Ver Meus Projetos</button>
     </section>
     <section id="projetos">
         <h2>Meus Projetos</h2>
@@ -49,12 +49,23 @@
             <a href="https://josefilhoest.github.io/tradutor-devclub/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
-                <h3>Projeto 3</h3>
-                <p>Projeto Landing Page para salão de beleza Desenvolvido com <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css"></i></p>
-                <img src="./img/imagem land salao.jpg" alt="Projeto salão de beleza" width="650" height="350"></img>
-                <img src="./img/pagina 2 jf beleza.jpg" alt="imagem com imagens de serviços de salão" width="650" height="350"></img>
-                <a href="https://josefilhoest.github.io/JF-BELEZA/">
-                    <button class="ver-projeto">Ver Projeto</button></a>
+            <h3>Projeto 3</h3>
+            <p>Projeto Landing Page para salão de beleza Desenvolvido com <i class="fa-brands fa-html5"></i> <i
+                    class="fa-brands fa-css"></i></p>
+            <img src="./img/imagem land salao.jpg" alt="Projeto salão de beleza" width="650" height="350"></img>
+            <img src="./img/pagina 2 jf beleza.jpg" alt="imagem com imagens de serviços de salão" width="650"
+                height="350"></img>
+            <a href="https://josefilhoest.github.io/JF-BELEZA/">
+                <button class="ver-projeto">Ver Projeto</button></a>
+
+            <h3>Projeto 4</h3>
+            <p>Projeto  Landing page pra lanchonete Desenvolvido com <i class="fa-brands fa-html5"></i> <i
+                    class="fa-brands fa-css"></i> <i class="fa-brands fa-js"></i></p>
+            <img src="./img/imagem land page lanchonete.JPG" alt="Projeto Lanchonete" width="650" height="350"></img>
+            <img src="./img/imagem 2 land page lanchonete.JPG" alt="imagem 2 projeto lanchonete" width="650" height="350"></img>
+            <a href="https://josefilhoest.github.io/lanchonete-izinha/">
+                <button class="ver-projeto">Ver Projeto</button></a>
+
         </div>
     </section>
     <section id="contato">
@@ -70,7 +81,7 @@
 
 
     <script src="script.js"></script>
-   <footer>
+    <footer>
         <p>&copy; 2026 José Filho. Todos os direitos reservados.</p>
     </footer>
 </body>
