criaçao area de certificados

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="#Area-de-certificação">Certificação</a></li>
             </ul>
         </nav>
     </header>
@@ -29,6 +30,7 @@
             e interessantes .</p>
         <button onclick="location.href='#projetos'">Ver Meus Projetos</button>
     </section>
+    
     <section id="projetos">
         <h2>Meus Projetos</h2>
 
@@ -67,6 +69,23 @@
                 <button class="ver-projeto">Ver Projeto</button></a>
 
         </div>
+    </section>
+    <section id="Area-de-certificação">
+        <h2 class="Certificação">Area de Certificação</h2>
+        <div class="certificados">
+            <a href="./img/Certificado - Dev Club - Jose Ribeiro Filho - HTML.png" target="_blank">
+            <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - HTML.png" alt="Certificado HTML e CSS DevClub" width="400"
+                    height="250">
+            </a>
+            <a href="./img/Certificado - CSS Intermediário.png" target="_blank">
+                <img src="./img/Certificado - CSS Intermediário.png" alt="Certificado JavaScript DevClub" width="400"
+                    height="250">
+            </a>
+            <a href="./img/Certificado - Dev Club - Jose Ribeiro Filho - Git & GitHub.png" target="_blank">
+                <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - Git & GitHub.png" alt="Certificado JavaScript DevClub" width="400"
+                    height="250">
+        </div>
+        
     </section>
     <section id="contato">
         <h2>Contato</h2>
