--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="#softskills">Soft Skills</a></li>
                 <li><a href="#Area-de-certificação">Certificação</a></li>
             </ul>
         </nav>
@@ -30,7 +31,7 @@
             e interessantes .</p>
         <button onclick="location.href='#projetos'">Ver Meus Projetos</button>
     </section>
-    
+
     <section id="projetos">
         <h2>Meus Projetos</h2>
 
@@ -38,33 +39,32 @@
             <h3>Projeto 1</h3>
             <p>Landing Page oficina,com peças de demostração e com atendimento direcionado ao cliente por wathsapp.
                 Desenvolvido com <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css"></i> .</p>
-            <img src="./img/oficina imagem 1.jpg" alt="Projeto Site Oficina" width="650" height="350"></img>
-            <img src="./img/oficina imagem 2.jpg" alt="imagem 2" width="650" height="350"></img>
+            <img src="./img/oficina imagem 1.jpg" alt="Projeto Site Oficina">
+            <img src="./img/oficina imagem 2.jpg" alt="imagem 2">
             <a href="https://josefilhoest.github.io/ciclo-pecas-o-coquinho/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
             <h3>Projeto 2</h3>
             <p>Projeto tradutor online funcional,Desenvolvido com <i class="fa-brands fa-html5"></i> <i
                     class="fa-brands fa-css"></i> <i class="fa-brands fa-js"></i></p>
-            <img src="./img/imagem tradutor.jpg" alt="Projeto Tradutor Online" width="650" height="350"></img>
-            <img src="./img/tradutor traduzindo.jpg" alt="imagem tradutor traduzindo" width="650" height="350"></img>
+            <img src="./img/imagem tradutor.jpg" alt="Projeto Tradutor Online">
+            <img src="./img/tradutor traduzindo.jpg" alt="imagem tradutor traduzindo">
             <a href="https://josefilhoest.github.io/tradutor-devclub/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
             <h3>Projeto 3</h3>
             <p>Projeto Landing Page para salão de beleza Desenvolvido com <i class="fa-brands fa-html5"></i> <i
                     class="fa-brands fa-css"></i></p>
-            <img src="./img/imagem land salao.jpg" alt="Projeto salão de beleza" width="650" height="350"></img>
-            <img src="./img/pagina 2 jf beleza.jpg" alt="imagem com imagens de serviços de salão" width="650"
-                height="350"></img>
+            <img src="./img/imagem land salao.jpg" alt="Projeto salão de beleza">
+            <img src="./img/pagina 2 jf beleza.jpg" alt="imagem com imagens de serviços de salão">
             <a href="https://josefilhoest.github.io/JF-BELEZA/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
             <h3>Projeto 4</h3>
-            <p>Projeto  Landing page pra lanchonete Desenvolvido com <i class="fa-brands fa-html5"></i> <i
+            <p>Projeto Landing page pra lanchonete Desenvolvido com <i class="fa-brands fa-html5"></i> <i
                     class="fa-brands fa-css"></i> <i class="fa-brands fa-js"></i></p>
-            <img src="./img/imagem land page lanchonete.JPG" alt="Projeto Lanchonete" width="650" height="350"></img>
-            <img src="./img/imagem 2 land page lanchonete.JPG" alt="imagem 2 projeto lanchonete" width="650" height="350"></img>
+            <img src="./img/imagem land page lanchonete.JPG" alt="Projeto Lanchonete">
+            <img src="./img/imagem 2 land page lanchonete.JPG" alt="imagem 2 projeto lanchonete">
             <a href="https://josefilhoest.github.io/lanchonete-izinha/">
                 <button class="ver-projeto">Ver Projeto</button></a>
 
@@ -74,35 +74,48 @@
         <h2 class="Certificação">Area de Certificação</h2>
         <div class="certificados">
             <a href="./img/Certificado - Dev Club - Jose Ribeiro Filho - HTML.png" target="_blank">
-            <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - HTML.png" alt="Certificado HTML e CSS DevClub" width="400"
-                    height="250">
+                <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - HTML.png" alt="Certificado HTML e CSS DevClub">
             </a>
             <a href="./img/Certificado - CSS Intermediário.png" target="_blank">
-                <img src="./img/Certificado - CSS Intermediário.png" alt="Certificado JavaScript DevClub" width="400"
-                    height="250">
+                <img src="./img/Certificado - CSS Intermediário.png" alt="Certificado JavaScript DevClub">
             </a>
             <a href="./img/Certificado - Dev Club - Jose Ribeiro Filho - Git & GitHub.png" target="_blank">
-                <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - Git & GitHub.png" alt="Certificado JavaScript DevClub" width="400"
-                    height="250">
+                <img src="./img/Certificado - Dev Club - Jose Ribeiro Filho - Git & GitHub.png" alt="Certificado JavaScript DevClub">
+            </a>
         </div>
-        
+
     </section>
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Você pode me encontrar nas redes sociais:</p>
-        <a href="https://www.linkedin.com/in/jose-filho-286074204" target="_blank"><i
-                class="fa-brands fa-linkedin"></i></a>
-        <a href="https://github.com/josefilhoest" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.instagram.com/joseribeiro1634/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://wa.me/+5585981963794"><i class="fa-brands fa-whatsapp"></i></a>
-    </section>
+    <section id="softskills">
+        <h2>soft skills</h2>
+
+        <ul>
+            <li>-Comunicação eficaz</li>
+            <li>-Trabalho em equipe</li>
+            <li>-Resolução de problemas</li>
+            <li>-Adaptabilidade</li>
+            <li>-Gerenciamento de tempo</li>
+            <li>-Pensamento crítico</li>
+            <li>-Empatia</li>
+            <li>-Proatividade</li>
+
+        </ul>
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Você pode me encontrar nas redes sociais:</p>
+            <a href="https://www.linkedin.com/in/jose-filho-286074204" target="_blank"><i
+                    class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/josefilhoest" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/joseribeiro1634/" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/+5585981963794"><i class="fa-brands fa-whatsapp"></i></a>
+        </section>
 
 
 
-    <script src="script.js"></script>
-    <footer>
-        <p>&copy; 2026 José Filho. Todos os direitos reservados.</p>
-    </footer>
+        <script src="script.js"></script>
+        <footer>
+            <p>&copy; 2026 José Filho. Todos os direitos reservados.</p>
+        </footer>
 </body>
 
 
