Ajuste: ícones de redes sociais lado a lado

--- a/index.html
+++ b/index.html
@@ -102,12 +102,14 @@
         <section id="contato">
             <h2>Contato</h2>
             <p>Você pode me encontrar nas redes sociais:</p>
-            <a href="https://www.linkedin.com/in/jose-filho-286074204" target="_blank"><i
-                    class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/josefilhoest" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.instagram.com/joseribeiro1634/" target="_blank"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/+5585981963794"><i class="fa-brands fa-whatsapp"></i></a>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/jose-filho-286074204" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/josefilhoest" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/joseribeiro1634/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://wa.me/+5585981963794"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
         </section>
 
 
